# aws-rust-lambda

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile-rust  README.md
src/: main.rs
