[package]
name = "hello_server"
version = "0.1.0"
authors = ["joaquindk <guillenmelo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.2"
http = "0.2.1"
log = "0.4.11"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
